--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@ nav a {
   text-decoration: none;
   color: white;
   margin-left: 10px;
+  /* border: 2px solid #ff0000; */
 }
 
+/* this is the validation message */
 h2 {
   color: rgb(197, 24, 15);
   /* border: 5px solid blue; */
@@ -42,7 +44,7 @@ h3 {
 }
 
 .container {
-  border: 1px solid rgba(193, 193, 204, 0.244);
+  border: 1px solid rgba(204, 193, 193, 0.244);
   margin: 50px;
   display: flex;
   justify-content: center;
@@ -54,7 +56,7 @@ form {
   background-color: #0f496b4d;
   /* border: 5px solid rgb(23, 23, 30); */
   width: 600px;
-  height: 800px;
+  height: 900px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -64,7 +66,7 @@ form {
 }
 
 input {
-  border: 4px solid rgb(182, 188, 193);
+  border: 3px solid rgb(182, 188, 193);
   height: 40px;
   width: 300px;
 }
@@ -85,4 +87,12 @@ input {
 
 img {
   color: #e3e6e84a;
+  border: 2px solid green;
+  height: 300px;
+}
+
+iframe {
+  height: 300px;
+  width: 500px;
+  border: 2px solid red;
 }
