editing some code

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ iframe {
   justify-content: center;
   justify-content: space-between;
   justify-content: space-around;
+  margin-bottom: 50px;
 }
 
 /* #form-validation {
